Tweak to gradlew/gradlew.bat + better .gitignore
Made it automatically allocate itself 2 GB of RAM so it doesn’t
constantly crash if anyone decides to run it again or any 3rd party
ever decides they might wanna add a feature and send a pull request.
Also updated .gitignore to ignore IntellijIDEA project files in case
anyone used those because reasons?

Anywho, it’s my first commit to the new updated project! Excitement!

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ forge.*
 bin/
 eclipse/.metadata/
 eclipse/.metadata
+.classpath
+.idea/
+ElectricExpansion.iml
+ElectricExpansion.ipr
+ElectricExpansion.iws
