fixed git files

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-eclipse/
+/*
+!/.gitignore
+!/gradle/
+!/gradle/*
+!/gradle*
+!/src/
+!/src/*
+!/*.gradle
+!/*.md
 .gradle
-build
-out
-forge.*
-bin/
-eclipse/.metadata/
-eclipse/.metadata
-.classpath
-.idea/
-ElectricExpansion.iml
-ElectricExpansion.ipr
-ElectricExpansion.iws
